* IMPROVEMENT: Upgraded maven-jar-plugin dependency plugin from version 2.6 to 3.0.2
* FEATURE: Now Possible to extend with TCPClient. Also possible to initialize SigingTCPClient and ExtenderTCPClient separately. Deprecated TCPClient(TCPClientSettings) constructor.
* IMPROVEMENT: No support for Java 5 and Java 6 anymore.

Version 4.10

* BUGFIX: Removed complex HTTP client initializing option using sub-clients.

2017-08-31 4.10.117

* IMPROVEMENT: Added KSISigningService and KSIExtendingService which act as a more high level alternatives to KSISigningClient and KSIExtenderClient. Both clients can be converted to services via KSISigningClientServiceAdapter and KSIExtendingClientServiceAdapter.
* IMPROVEMENT: All the API components which used to be initializable with clients are now also initializable with services.
* IMPROVEMENT: Chain index continuation check in internal verification is done now earlier.
* IMPROVEMENT: Configuration requests in the KSI instance have been deprecated. Callback and Future based asynchronous configuration asking implemented to all the KSISigningServices and KSIExtenderServices.
* IMPROVEMENT: Deprecated VerificationContext.setPduFactory(PduFactory). Has no effect since PduFactory is defined in the KSIExtendingService level.
* IMPROVEMENT: HMAC algorithm check on incoming messages.
* IMPROVEMENT: Logging of unknown skipped PDUv2 responses.
* IMPROVEMENT: Now possible to verify input hash level, default value is 0, GEN-03 is returned in case of error.
* IMPROVEMENT: Renewed and cleaned test resources and improved test coverage.
* IMPROVEMENT: Set PDU version 2 as default PDU version.
* IMPROVEMENT: TCP client now uses only Apache MINAs concurrency mechanisms. Removed additional thread pool.
* FEATURE: HAService (High-availability service) is a service that combines multiple KSISigningServices and KSIExtenderServices to achieve redundancy.
* FEATURE: KSI interface refactoring into separate interfaces.